--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,35 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+
+	<ion-menu side="start">
+		<ion-header>
+			<ion-toolbar color="primary">
+				<ion-title>Menu</ion-title>
+			</ion-toolbar>
+		</ion-header>
+	</ion-menu>
+
+	<ion-content>
+		<ion-list>
+			<ion-menu-toggle auto-hide="false">
+
+				<ion-item button href="/home" routerDirection="root">
+					<ion-icon slot="start" name="chatbubbles"></ion-icon>
+					<ion-label>Chat</ion-label>
+				</ion-item>
+
+				<ion-item button href="/about" routerDirection="root">
+					<ion-icon slot="start" name="information-circle"></ion-icon>
+					<ion-label>About</ion-label>
+				</ion-item>
+
+				<ion-item button (click)="logout()">
+					<ion-icon slot="start" name="power"></ion-icon>
+					<ion-label>Logout</ion-label>
+				</ion-item>
+
+			</ion-menu-toggle>
+		</ion-list>
+	</ion-content>
+
+	<ion-router-outlet main></ion-router-outlet>
 </ion-app>
