--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,13 @@
 #container a {
   text-decoration: none;
 }
+
+textarea {
+  width: 98%;
+  margin: 0px 10px;
+  padding: 5px;
+  background-color: #fff;
+  font-size: 1.2em;
+  resize: none;
+  border: none;
+}
